--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -21,12 +21,14 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: #f5f5f5;
-    @include min-max($smartLarge, $desktop - 1) {
-      width: 62vh;
+    @include min-max($smartLarge, $desktop) {
+     height: 52vh;
+      
     }
-    @include min-max($smartphone, $smartLarge - 1) {
+    @include min-max($smartphone, $smartLarge) {
       flex-direction: column;
       border: none;
+      
     }
   }
   &__content {
@@ -36,17 +38,21 @@
     justify-content: space-around;
      padding-left: 10px;
 
-    @include min-max($smartphone, $smartLarge - 1) {
+    @include min-max($smartphone, $smartLarge) {
       display: inherit;
       gap: inherit;
       padding-left: 10px;
+      height: 0;
     }
+    @include min-max($tablet, $desktop) {
+      height: 70%;
   }
+}
   &__infos {
        display: flex;
     flex-direction: column;
     align-items: center;
-    @include min-max ($smartphone, $smartLarge - 1 ) {
+    @include min-max ($smartphone, $smartLarge) {
       margin-top: 3.125rem;
     }
    
@@ -57,11 +63,11 @@
     color: #666;
     text-align: center;
 
-    @include min-max($smartphone, $smartLarge - 1) {
+    @include min-max($smartphone, $smartLarge) {
       font-size: 1.188rem;
       display: none;
     }
-    @include min-max($smartLarge, $desktop - 1) {
+    @include min-max($smartLarge, $desktop ) {
       font-size: 1.125rem;
      
     }
@@ -80,20 +86,20 @@
   &__empl {
     font-size: 23px;
     text-align: center;
-    @include min-max($smartphone, $tablet - 1) {
+    @include min-max($smartphone, $tablet  ) {
       font-size: 14px;
     }
   }
   
   h1 {
     font-size: 2.813rem;
-    @include min-max($smartLarge, $desktop - 1) {
+    @include min-max($smartLarge, $desktop  ) {
       font-size: 1.375rem;
     }
-    @include min-max($desktop, $big-desktop - 1) {
+    @include min-max($desktop, $big-desktop  ) {
       font-size: 1.875rem;
     }
-    @include min-max($smartphone, $smartLarge - 1) {
+    @include min-max($smartphone, $smartLarge  ) {
       font-size: 0.938rem;
     }
   }
@@ -131,7 +137,7 @@
     align-items: center;
     height: 2.5rem;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-    @include min-max($smartphone, $smartLarge - 1 ) {
+    @include min-max($smartphone, $smartLarge   ) {
       height: 1.875rem;
     }
   }
@@ -144,11 +150,20 @@
   box-shadow: 1px 2px rgb(142, 143, 140);
   margin: 10px;
 
-  @include min-max($smartphone, $smartLarge - 1) {
+  @include min-max($smartphone, $smartLarge  ) {
     gap: inherit;
+  
+    width: 38vw;
   }
+  @include min-max($smartLarge,$tablet) {
+    height: 33vh;
+    width: 24vw;
+  }
+  @include min-max($desktop, $big-desktop) {
+    height: 33vh;
+    width: 18vw;
 }
-
+}
 .image {
   width: 100%;
 }
@@ -157,7 +172,7 @@
   height: 5rem;
   margin-top: 1.25rem;
 
-  @include min-max($smartphone, $desktop - 1) {
+  @include min-max($smartphone, $desktop  ) {
     height: 3.75rem;
     
   }
