--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -7,14 +7,14 @@
   align-items: center;
   font-size: 1.375rem;
   height: 4.063rem;
-  @include min-max($smartphone, $smartLarge - 1) {
+  @include min-max($smartphone, $smartLarge) {
     font-size: 0.938rem;
     justify-content: space-evenly;
   }
-  @include min-max($smartLarge, $tablet - 1){
+  @include min-max($smartLarge, $tablet){
     justify-content: space-evenly;
   }
-  @include min-max($smartLarge, $desktop - 1){
+  @include min-max($smartLarge, $desktop){
     font-size: 1.188rem;
   }
   a {
@@ -26,7 +26,7 @@
   &__link {
     display: flex;
     gap: 1.875rem;
-    @include min-max($smartphone, $smartLarge - 1) {
+    @include min-max($smartphone, $smartLarge  ) {
       text-align: center;
       display: flex;
       align-items: center;
