--- a/src/pages/addEmployee/_addEmployee.scss
+++ b/src/pages/addEmployee/_addEmployee.scss
@@ -2,6 +2,9 @@
   width: 100%;
   height: 90vh;
   padding-bottom: 1.563;
+  @include min-max($smartphone, $smartLarge   ) {
+    height: 97vh;
+  }
 
   &__wrapperForm {
     display: flex;
@@ -21,7 +24,7 @@
     &__name,
     &__title {
       color: $green;
-      @include min-max($smartphone, $smartLarge - 1 ) {
+      @include min-max($smartphone, $smartLarge   ) {
         display: none;
       }
     }
