--- a/src/pages/home/_home.scss
+++ b/src/pages/home/_home.scss
@@ -164,16 +164,20 @@
     width: 18vw;
 }
 }
-.image {
-  width: 100%;
-}
 
 .homePage__group {
   height: 5rem;
   margin-top: 1.25rem;
+  max-width: 30%; /* Assurez-vous que l'image ne dépasse pas la largeur du conteneur parent */
+  height: auto; /* Laissez la hauteur être ajustée en conséquence */
 
   @include min-max($smartphone, $desktop  ) {
     height: 3.75rem;
-    
+  }
+  @include min-max($desktop, $big-desktop){
+    max-width: 20%;
+  }
+  @include min-max($smartphone, $tablet){
+    max-width: 40%;
   }
 }
