--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -18,7 +18,7 @@ $SuperBig : 1660px;
       @content;
     }
   }
-    @mixin desk {
+    @mixin desktop {
       @media only screen and (min-width: $desktop) {
         @content;
       }
@@ -33,14 +33,13 @@ $SuperBig : 1660px;
     @content;
   }
 }
-
-@media (min-width: $tablet) {
-
+@mixin smartphone{
+  @media only screen and (max-width: $smartphone) {
+    @content;
+  }
 }
 
-@media (min-width: $smartLarge) {
-  
-}
+
 
 // colors
 
